# aventyr-demo

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  VERIFICATION.md  pyproject.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
data/: customer_accounts.csv  dispute_log.csv  guard_pool.csv  incident_samples.json  monitoring_queue.csv  site_demand.csv  weather_events.csv
exports/: billing_run_audit_log.csv  held_events.csv  odoo_ar_export.csv
src/aventyr_ops/: __init__.py  app.py  config.py  models.py
src/aventyr_ops/crews/: __init__.py  alarm_billing.py  guard_coverage.py  incident_intake.py
src/aventyr_ops/services/: __init__.py  audit_log.py  data_loader.py  exports.py
src/aventyr_ops/ui/: components.py
tests/: test_alarm_billing.py  test_app_ui_helpers.py  test_guard_coverage.py  test_incident_intake.py
